# MyTube

./: .gitignore  README.md  app.py  config.example.yaml  create_shortcut.py  download.py  edit.py  install.bat  launch_app.bat  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: update-version.yml
docs/: requirements.txt
src/mytube/: cli.py  config.py  download.py  logger.py  process.py  web_app.py
