[project]
name = "mytube"
version = "2025.3.12"
description = "Simple package for downloading, editing and displaying YouTube videos."
authors = [
    { name = "Mauricio Fernández", email = "mauricio.fernandez.lb@gmail.com" }
]
dependencies = [
    "pytubefix",
    "moviepy",
    "opencv-python",
    "gradio",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
