[project]
name = "mytube"
version = "2026.1.2"
description = "Simple package for downloading, editing and displaying YouTube videos."
authors = [
    { name = "Mauricio Fernández", email = "mauricio.fernandez.lb@gmail.com" }
]
dependencies = [
    "pytubefix",
    "moviepy",
    "opencv-python",
    "gradio",
    "matplotlib",
    "pyyaml"
]

[project.scripts]
mytube = "mytube.cli:main"

[project.optional-dependencies]
# Install with: pip install .[docs]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "Pygments>=2.15",
    "mkdocs-include-markdown-plugin>=7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
